fix (text align left) in cards

--- a/src/sass/layout/_home_page.scss
+++ b/src/sass/layout/_home_page.scss
@@ -8,6 +8,7 @@
   grid-auto-rows: auto;
   gap: 30px;
   max-width: 320px;
+  text-align: left;
 
   margin-top: 20px;
   margin-right: 20px;
